# CSVM

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CSVM.sln  CSVM.vcxproj  CSVM.vcxproj.filters  Framework.txt  Makefile  README  README.md  cmake_install.cmake  edit  genReport  genRplots  genRplotsLive  harvest  run  run.sh  setup  svmTheorie.txt
DSVM_REGRESSION/: ParamGUI.py  ParamOpt.py  README  cmaes_bandit_eval_log  param_generator.py  param_tester.py  performtest.py
DSVM_REGRESSION/Results/INIT_28/: Score_BanditTester_PSO_ucbv_100000_Evals_Score_0.000085  Score_BanditTester_PSO_ucbv_100000_Evals_Score_0.000215
DSVM_REGRESSION/SVM/: .nfs00000000000a8a4000000dc8  .nfs000000000014961100000d93  .nfs00000000042a520100000dcd  Makefile  SIMUL.c  SVM.cpp  SVM.h  SVM.i  SVM.out  SVM.py  SVM_wrap.cxx  Score_1  State.h  param_letters.c  param_letters.h  utils.cpp  utils.h
DSVM_REGRESSION/SVM/DATASETS/: 04.csv  16.csv  17.csv  18.csv  19.csv  22.csv  25.csv  27.csv  28.csv  29.csv  auto_mpg.csv  (+1 more)
DSVM_REGRESSION/generators/: random_bandit.py
DSVM_REGRESSION/testers/: SVMTester.py  bandit.py  start.sh
GUI/: csvm_window.py
PSO/: Makefile  ParamGUI.py  README  performtest.py
PSO/CSVM/: CSVM  csvm.py  test.py
PSO/Results/: Score_GenericTester_PSO_ucbv_1000_Evals_Score_0.000000  Score_NumperTester_PSO_ucbv_1000_Evals_Score_0.000000  Score_NumperTester_PSO_ucbv_10_Evals_Score_0.000000  Score_NumperTester_PSO_ucbv_1_Evals_Score_0.000000  Score_NumperTester_PSO_ucbv_4_Evals_Score_0.000000
PSO/generators/: __init__.py  cma_gen_ucbv.py  pso_threaded.py  pso_ucbv.py  xnes_bare.py
PSO/testers/: .bandit.py.swp  CSVMTester.py  SVMTester.py  bandit.py  codebook-generation-settings  csvm.py  generateCodebook._py  generateCodebook.sh  generictester.py  pso_bandit_eval_log
SvmCodeMarco/PYTHON_OPT_CLASSIFICATION_SVM/: cma.py  param_generator.py  param_tester.py  performtest.py  pso_ask_tell.py  start.sh  xnes.py
datasets/: README  README.txt
include/Eigen/: Core  OrderingMethods
include/csvm/: csvm.h  csvm_annotated_kmeans.h  csvm_centroid.h  csvm_cifar10_parser.h  csvm_classifier.h  csvm_clean_descriptor.h  csvm_cluster_analyser.h  csvm_codebook.h  csvm_conv_svm.h  csvm_dataset.h  csvm_deep_codebook.h  csvm_experiment.h  csvm_feature.h  csvm_feature_extractor.h  csvm_frequency_matrix.h  csvm_hog_descriptor.h  csvm_image.h  csvm_image_scanner.h  csvm_interpolator.h  csvm_kmeans.h  csvm_lbp_descriptor.h  csvm_linear_network.h  csvm_lvq.h  csvm_merge_descriptor.h  csvm_mlp.h  csvm_mlp_controller.h  csvm_mlp_stacked.h  csvm_mnist_parser.h  csvm_neuron.h  csvm_new_rbm.h  csvm_opencv_incl.h  csvm_patch.h  csvm_rbm.h  csvm_settings.h  csvm_svm.h  csvm_svm_settings.h  csvm_template.h  csvm_whitening.h  mlp_controller.h
include/dnn/: dnn.h  dnn_backprop.h  dnn_data.h  dnn_flow.h  dnn_layer_stack.h  dnn_math.h  dnn_module.h  dnn_pretrainer.h  dnn_weights.h
include/hogbovw/: hb_hog_descriptor.h  hb_image_scanner.h  hb_kmeans.h  hb_lvq.h  hb_opencv_incl.h  hogbovw.h
mlp/: .~lock.Results.ods#  Results.ods  a.out  dynamic_XOR_MLP.cc  mlp  mlp.cc  mlp_geenstress.cc  xormlp.cc
scores/: 1MLP_MNIST  1MLP_MNIST_0.01
src/: main.cc
src/csvm/: .csvm_classifier.cc.kate-swp  .csvm_mlp.cc.kate-swp  .csvm_mlp.cc.swm  .csvm_mlp.cc.swn  .csvm_mlp.cc.swo  .csvm_mlp.cc.swp  .csvm_mlp_controller.cc.swp  create_new_map.sh  csvm_annotated_kmeans.cc  csvm_centroid.cc  csvm_cifar10_parser.cc  csvm_classifier.cc  csvm_clean_descriptor.cc  csvm_cluster_analyser._cc_  csvm_cluster_analyser.cc  csvm_codebook.cc  csvm_conv_svm.cc  csvm_dataset.cc  csvm_deep_codebook.cc  csvm_experiment.cc  csvm_feature.cc  csvm_feature_extractor.cc  csvm_frequency_matrix.cc  csvm_hog_descriptor.cc  csvm_image.cc  csvm_image_scanner.cc  csvm_interpolator.cc  csvm_kmeans.cc  csvm_lbp_descriptor.cc  csvm_linear_network.cc  csvm_lvq.cc  csvm_merge_descriptor.cc  csvm_mlp.cc  csvm_mlp_controller.cc  csvm_mlp_stacked.cc  csvm_mnist_parser.cc  csvm_neuron.cc  csvm_new_rbm.cc  csvm_patch.cc  csvm_rbm._cc_  (+7 more)
src/dnn/: dnn_backprop.c  dnn_data.c  dnn_flow.c  dnn_layer_stack.c  dnn_math.c  dnn_pretrainer.c
src/hogbovw/: hb_hog_descriptor.cc  hb_image_scanner.cc
src/lodepng/: lodepng.cc
swig/: csvm.i  csvm_wrap.cxx  experiment.cc  experiment.h  swig.sh
(+65 files in other folders)
